Avoid sidebar overlap with attribution box

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -107,6 +107,10 @@ html, body {
   background-color: #ffffff10;
 }
 
+.shutdown-case:last-child {
+  margin-bottom: 30px;
+}
+
 .shutdown.date {
   font-size: smaller;
   line-height: 12px;
@@ -121,5 +125,5 @@ html, body {
 
 .shutdown.desc {
   display: inline-block;
-  margin-top: 2px;
+  margin-top: 10px;
 }
